<resources>
    <!-- App -->
    <string name="app_name">My Quotes</string>


    <!-- Main Activity -->
    <string name="main_title">@string/app_name</string>     <!-- This is how the app name is displayed in applications screen -->


    <!-- Settings -->
    <string name="settings_title">Settings</string>


    <!-- About -->
    <string name="about_title">About</string>


    <!-- Licenses -->
    <string name="licenses_title">Open source licenses</string>


    <!-- Quotes -->
    <string name="add_quote_title">Add Quote</string>
    <string name="edit_quote_title">Edit Quote</string>
    <string name="quotes_tab_title">@string/quotes</string>
    <string name="quotes_empty">No quotes</string>
    <string name="quotes_empty_advice">ADD QUOTE</string>
    <string name="quotes_hint_first_name">Author\'s first name</string>
    <string name="quotes_hint_last_name">Author\'s last name</string>
    <string name="quotes_hint_quote">Quote</string>
    <string name="only_this_quote">Edit this quote only</string>
    <string name="all_quotes">Edit all quotes with this author</string>


    <!-- Authors -->
    <string name="authors_title">@string/authors</string>
    <string name="authors_tab_title">@string/authors</string>
    <string name="authors_empty">Once you add a new quote, you\'ll see it\'s author listed here</string>
    <string name="edit_author_dialog_title">Author has changed</string>
    <string name="edit_author_dialog_message">What do you want to do?</string>


    <!-- General -->
    <string name="quotes">Quotes</string>
    <string name="authors">Authors</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="favorite_star">Favorite star</string>
    <string name="production">Production</string>
    <string name="developers">Developers</string>
    <string name="source_code">Source code</string>
    <string name="application">Application</string>
    <string name="version">Version</string>
    <string name="rate_us">Rate us</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="saved">Saved</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="cancel">Cancel</string>
    <string name="field_empty_error">Field cannot be empty</string>

    <string name="quote_copied">Quote copied to Clipboard</string>
    <string name="share_quote">Share quote…</string>
    <string-array name="share_copy">
        <item>@string/share</item>
        <item>@string/copy</item>
    </string-array>


    <!-- Preferences -->
    <string name="preferences_style">Style</string>
    <string name="pref_style_color" translatable="false">pref_style_color</string>
    <string name="preferences_choose_theme">Choose a theme</string>
    <string name="pref_show_star" translatable="false">pref_show_star</string>
    <string name="preferences_show_star">Show favorite star</string>
    <string name="pref_names_display" translatable="false">pref_names_display</string>
    <string name="preferences_names_display">Show first name first</string>


    <!-- App authors and sources -->
    <string name="app_authors" translatable="false">Michał Baran, Piotr Przybyło</string>
    <string name="logo_designer" translatable="false">Logo Designer</string>
    <string name="logo_designer_name" translatable="false">Adrian Baran</string>
    <string name="source_code_url" translatable="false">https://github.com/NobleAries/MyQuotes</string>


    <!-- Licenses -->
    <string name="colorpreference" translatable="false">Color Preference</string>
    <string name="colorpreference_license" translatable="false">Copyright (C) 2016 Kizito Nwose\nCopyright (C) 2016 Roman Nurik\n\nLicensed under the Apache License, Version 2.0 (the "License");\nyou may not use this file except in compliance with the License.\nYou may obtain a copy of the License at\n\n\thttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software\ndistributed under the License is distributed on an "AS IS" BASIS,\nWITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.\nSee the License for the specific language governing permissions and\nlimitations under the License.</string>
</resources>
