<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                                                xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.preference.PreferenceCategory
        android:key="pref_cat_style"
        android:title="@string/preferences_style">

        <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
            android:defaultValue="@color/blue700"
            android:key="@string/pref_style_color"
            android:title="@string/preferences_choose_theme"
            app:colorChoices="@array/color_choices"
            app:numColumns="3"/>

        <Preference
            android:defaultValue="true"
            android:key="@string/pref_names_display"
            android:title="@string/preferences_names_display"/>

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>