<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:focusableInTouchMode="true"
    tools:context="io.blacklagoonapps.myquotes.quotes.QuotesActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_quotes_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quotes_hint_first_name">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textinputedittext_quotes_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_quotes_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quotes_hint_last_name">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textinputedittext_quotes_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords|textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_quotes_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:button="@drawable/favorite_star"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinputlayout_quotes_quote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quotes_hint_quote">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/textinputedittext_quotes_quote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textCapSentences|textMultiLine"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
